--- a/src/App.css
+++ b/src/App.css
@@ -59,9 +59,8 @@
   top: 0;
   left: 0;
   height: 100%;       
-  width: 120px;       
-  background-color: #121010;
-  padding: 10px 0;
+  width: 120px;     
+  background-color: rgb(158, 154, 154);
   overflow-y: auto;
   z-index: 999;
 }
@@ -77,10 +76,14 @@
   display: block;
   padding: 10px 15px;
   text-decoration: none;
-  color: white;
-  border-bottom: 1px solid #444;
+  color: rgb(12, 8, 8);
 }
-
+.navbar1 button{
+  background-color: rgb(158, 154, 154);
+}
+.navbar1 button:hover{
+  background-color: #555;
+}
 .navbar1 a:hover {
   background-color: #555;
 }
@@ -101,7 +104,7 @@
   left: 50%;
   height: 250px;
   transform: translate(-50%, -50%);
-  background-color: #2f93a7;
+  background-color: #4e60c4;
   padding: 20px;
   border-radius: 8px;
   width: 80%;
@@ -118,6 +121,11 @@
 }
 .add-post-page button{
   margin-top: 80px;
+}
+
+.navbarscribes{
+  color: black;
+  margin-top: 270%;
 }
 
 .exit-button {
@@ -147,7 +155,7 @@
 }
 .skills-feed{
 background-color: rgb(10, 7, 7);
-border: 4px solid rgb(139, 42, 42);
+border: 2px solid rgb(81, 81, 181);
 border-radius: 7px;
 z-index: 1;
 }
@@ -172,11 +180,11 @@ z-index: 1;
 
 }
 .feedlogop{
-    color: rgb(105, 99, 167);
+    color: rgb(90, 82, 174);
     font-size: 40px;
     position: fixed;
     top: -10px;
-    left: 200px;
+    left: 240px;
     font-family: cursive;
     
 }
@@ -190,10 +198,12 @@ z-index: 1;
   background-color: #e7d6d6; /* Change the background color as needed */
   z-index: 999;
 }
-.topoffeed img{
-  height: 100px;
-  position: fixed;
-  
+.toplogo {
+  height: 50px;
+  border-radius: 50%;
+  position: absolute;
+  top: 15px;
+  left: 65px;
 }
 
 .feedpara{
@@ -313,7 +323,7 @@ margin-top: -40px;
   max-width: 550px; /* Adjust as needed */
   height: auto; /* Allow the height to adjust based on content */
   margin: 0 auto; /* Center the container horizontally */
-  padding: 20px; /* Add padding around the container */
+  padding: 10px; /* Add padding around the container */
   box-sizing: border-box; /* Ensure padding is included in width */
   border: 1px solid #3766a3;
 }
@@ -321,6 +331,7 @@ margin-top: -40px;
   position: relative;
   margin-bottom: 5px;
   top: 50%;
+  color: white;
   font-size: 15px;
   font-weight: bolder;
   left: 50%;
@@ -332,43 +343,46 @@ margin-top: -40px;
   color: white;
   font-size: 15px;
   font-weight: bolder;
-  left: 50%;
+  left: 43.5%;
   width: 50px;
   transform: translate(-50%, -50%);
-  position: relative;
-  top: 17px;
+  top: 10px;
 }
 .feedpagename:hover{
 background-color: black;
 }
 .profilep{
-  border-radius: 90%;
+  border-radius: 50%;
+  
 }
 .feedprofilep{
   border-radius: 50%;
-  position: absolute;
-  margin-left: -170px;
   
 }
 
 .delete-post-btn {
   position: relative;
-  top: 0;
-  right: -44%;
-  background-color: rgb(0, 221, 255);  /* or another color of your choice */
+  top: 5px;
+  right: -88%;
+  background-color: rgb(58, 92, 97);  /* or another color of your choice */
   border: none;
+  display: flex; /* Flexbox to center the "X" */
+  align-items: center; /* Center vertically */
+  justify-content: center; 
   cursor: pointer;
   z-index: 100;
-  height: 30px;
-  width: 10px;
+  height: 20px;
+  width: 0px;
 }
 
 
 .likebutton{
 position: relative;
-left: -41.2%;
-top: 100px;
-height: 55px;
-width: 55px;
-
+display: flex; /* Flexbox to center the "X" */
+align-items: center; /* Center vertically */
+justify-content: center;
+top: -20px;
+height: 30px;
+width: 50px;
+padding: 5px 0;
 }
