--- a/src/App.css
+++ b/src/App.css
@@ -46,27 +46,20 @@
   color: #888;
 }
 
-.navbar-main{
-  background-color: black;
-  left: 0;
-  top: 0;
-  width: 100px;
-  height: 100vh;
-  position: fixed;
-}
 .navbar1 {
   position: fixed;  
   top: 0;
   left: 0;
   height: 10%;       
   width: 100%;     
-  background-color: rgb(236, 224, 224);
+  background-color: white;
   overflow-y: auto;
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 999;
   padding: 0 20px;
+  border: 1px solid rgb(213, 192, 192);
 }
 
 .loginlogo{
@@ -84,12 +77,11 @@
 }
 .logoutb{
   position: fixed;
- margin-left: 390px;
-  border: 2px solid #c92b07;
-  color: #bb0000;
+  margin-left: 80%;
+  border: 1px solid #c92b07;
 }
 .navbar1 button{
-  background-color: rgb(227, 211, 211);
+  background-color: white;
 }
 
 .navbar1 button:hover{
@@ -198,28 +190,23 @@ z-index: 1;
 .feedlogop{
     color: rgb(0, 0, 0);
     font-size: 40px;
-    position: fixed;
-    top: -10px;
-    left: 220px;
+    top: -23px;
+    margin-left: -600px;
     font-family: cursive;
-    
+    max-width: 10%
 }
 
 .topoffeed{
   position: fixed;
-  top: 0;
-  left: 120px;
-  width: 100%;
-  height: 80px;
-  background-color: #e7d6d6; /* Change the background color as needed */
   z-index: 999;
 }
 .toplogo {
+  position: fixed;
   height: 50px;
   border-radius: 50%;
   position: absolute;
-  top: 15px;
-  left: 40px;
+  top: 29px;
+  left: -460px;
 }
 
 .Logindiv {
