--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,7 @@
   padding: 20px;
   border-radius: 8px;
   width: 80%;
+  height: 250px;
   max-width: 500px;
   z-index: 9999;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
@@ -430,5 +431,6 @@ form {
 .add-post-page button {
   margin-top: 10px;
   color: black;
-  background-color: black;
+  background-color: white;
+  border: 1px solid black;
 }
